5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1594_1800.log
== TEST (2019-03-19 16:02:41) 
-- CODE:
(a2+b2+c2)/(a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    (a2+b2+c2)/(a+b+c)
NameError: name 'a2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:04:20) 
-- CODE:
print(round((2+3+4)/(5+6+7),6))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:04:26) 
-- CODE:
print(round((2+3+4)/(5+6+7),6))
-- EXECUTION TIME:
0.121615
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
0.5
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
0.5
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
0.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:04:29) 
-- CODE:
print(round((2+3+4)/(5+6+7),6))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:06:08) 
-- CODE:
print(round((2+3+4)/(5+6+7),6))
-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:11:17) 
-- CODE:
print(round(((2)**2+(3)**2+(4)**2/(5+6+7),6))
-- ERROR:
File "XXXX", line 2
    
                                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:11:47) 
-- CODE:
print(round((((2)**2)+((3)**2)+((4)**2)/(5+6+7),6))
-- ERROR:
File "XXXX", line 2
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:12:20) 
-- CODE:
print(round((((2)**2)+((3)**2)+((4)**2)/(5+6+7),6)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round((((2)**2)+((3)**2)+((4)**2)/(5+6+7),6)))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:12:34) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(5+6+7),6)))
-- ERROR:
File "XXXX", line 1
    print(round(((2)**2)+((3)**2)+((4)**2)/(5+6+7),6)))
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:12:43) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(5+6+7),6))
-- OUTPUT:
13.888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:12:47) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(5+6+7),6))
-- EXECUTION TIME:
0.174728
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
13.888889
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
13.888889
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
13.888889
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:12:48) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(5+6+7),6))
-- OUTPUT:
13.888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:13:10) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(5+6+7),60))
-- OUTPUT:
13.88888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:13:17) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(5+6+7),06))
-- ERROR:
File "XXXX", line 1
    print(round(((2)**2)+((3)**2)+((4)**2)/(5+6+7),06))
                                                    ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:14:30) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(2+3+4),6))
-- OUTPUT:
14.777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:14:33) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(2+3+4),6))
-- EXECUTION TIME:
0.150055
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.777778
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
14.777778
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
14.777778
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:14:35) 
-- CODE:
print(round(((2)**2)+((3)**2)+((4)**2)/(2+3+4),6))
-- OUTPUT:
14.777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:14:59) 
-- CODE:
print(round(((a)**2)+((b)**2)+((c)**2)/(a+b+c),6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(((a)**2)+((b)**2)+((c)**2)/(a+b+c),6))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:15:21) 
-- CODE:
print(round(((1)**2)+((2)**2)+((3)**2)/(1+2+3),6))
-- OUTPUT:
6.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:02) 
-- CODE:
a=2
b=3
c=4
print(round((a)**2))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:41) 
-- CODE:
a=2
b=3
c=4
print(round((a)**2+(b)**2+(c)**2/a+b+c))
-- OUTPUT:
28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:25:54) 
-- CODE:
a=2
b=3
c=4
print(round((a)**2+(b)**2+(c)**2/a+b+c),6)
-- OUTPUT:
28 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:27:40) 
-- CODE:
a=2
b=3
c=4
print(round((a)**2+(b)**2+(c)**2/(a+b+c),6))
-- OUTPUT:
14.777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:27:45) 
-- CODE:
a=2
b=3
c=4
print(round((a)**2+(b)**2+(c)**2/(a+b+c),6))
-- EXECUTION TIME:
0.142179
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
14.777778
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
14.777778
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
14.777778
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:29:52) 
-- CODE:
a=2
b=3
c=4
a+b+c#0
print(round((a)**2+(b)**2+(c)**2/(a+b+c),6))
-- OUTPUT:
14.777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:30:46) 
-- CODE:
a=2
b=3
c=4

print(round((a)**2+(b)**2+(c)**2/(a+b+c),6))
-- OUTPUT:
14.777778
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:32:06) 
-- CODE:
a=2
b=3
c=4

print(round((a)**2+(b)**2+(c)**2/(a+b+c),6))


(a2+b2+c2)(a+b+c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    (a2+b2+c2)(a+b+c)
NameError: name 'a2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:33:35) 
-- CODE:
a=2
print((a)**2)
b=3
print((b)**2)
c=4
print((c)**2)




-- OUTPUT:
4
9
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:34:17) 
-- CODE:
a=2
print((a)**2)
b=3
print((b)**2)
c=4
print((c)**2)

print(a+b+c)/(a+b+c)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(a+b+c)/(a+b+c)
TypeError: unsupported operand type(s) for /: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:34:29) 
-- CODE:
a=2
print((a)**2)
b=3
print((b)**2)
c=4
print((c)**2)

print((a+b+c)/(a+b+c))



-- OUTPUT:
4
9
16
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:34:38) 
-- CODE:
a=2
print((a)**2)
b=3
print((b)**2)
c=4
print((c)**2)





-- EXECUTION TIME:
0.190073
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
4
9
16
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
4
9
16
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
4
9
16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:35:09) 
-- CODE:
a=2
print((a)**2)
b=3
print((b)**2)
c=4
print((c)**2)

print(round((a2+b2+c2)/(a+b+c),6))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round((a2+b2+c2)/(a+b+c),6))
NameError: name 'a2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:45:13) 
-- CODE:
a1=2
print((a1)**2)
b2=3
print((a2)**2)
c3=4
print((a3)**2)
a=1
b=2
c=3
 print(round((a1+b2+b3)/(a+b+c),6))





-- ERROR:
File "XXXX", line 10
    print(round((a1+b2+b3)/(a+b+c),6))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:45:22) 
-- CODE:
a1=2
print((a1)**2)
b2=3
print((a2)**2)
c3=4
print((a3)**2)
a=1
b=2
c=3






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((a2)**2)
NameError: name 'a2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:45:55) 
-- CODE:
a1=2
print((a1)**2)
b2=3
print((a2)**2)
c3=4
print((a3)**2)
a=1
b=2
c=3






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((a2)**2)
NameError: name 'a2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:46:31) 
-- CODE:
a1=2
print((a1)**2)
b2=3
print((a2)**2)
c3=4
print((a3)**2)
a=1
b=2
c=3






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print((a2)**2)
NameError: name 'a2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:47:13) 
-- CODE:
A=2
print((C)**2)
B=3
print((B)**2)
C=4
print((A)**2)
a=1
b=2
c=3






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print((C)**2)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:47:32) 
-- CODE:
A=2
print((A)**2)
B=3
print((B)**2)
C=4
print((C)**2)
a=1
b=2
c=3






-- OUTPUT:
4
9
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:41:05) 
-- CODE:
A=2
input((A)**2)
B=3
input((B)**2)
C=4
input((C)**2)
a=1
b=2
c=3






-- OUTPUT:
4916
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:42:17) 
-- CODE:
A=2
input((A)**2)
B=3
input((B)**2)
C=4
input((C)**2)
a=2
b=3
c=4
print(round((A+B+C)/(a+b+c)))





-- OUTPUT:
49161
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:42:32) 
-- CODE:
A=2
input((A)**2)
B=3
input((B)**2)
C=4
input((C)**2)

print(round((A+B+C)/(a+b+c)))





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round((A+B+C)/(a+b+c)))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:04:32) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))







-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round((A+B+C)/(a+b+c)))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:06:18) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c0))





-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:06:42) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),6))





-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:06:59) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),6))





-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:07:11) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.159062
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:10:38) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.17886
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:10:45) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.159511
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:11:22) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.179604
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:11:26) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.11512
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:11:32) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.2036
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:11:47) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.129778
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:26:07) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.221868
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:20:38) 
-- CODE:
a=int(input("digite o numero: "))
b=int(input("digite o numero: "))
c=int(input("digite o numero: "))

print(round((a**2+b**2+c**2)/(a+b+c),7))





-- EXECUTION TIME:
0.144928
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
